@@ -519,7 +519,7 @@
       that I keep alive during the lifecycle of the components within the
       architecture. Don't worry if the acronyms are currently too illogical
       for you - they will become more clear when you start looking at the
-      example design sheets that are referenced further in the book.</para>
+      example designs that are described further down the book.</para>
     </section>
   </section>
 </chapter>
