@@ -1,0 +1,1 @@
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="2" value="Server" style="swimlane;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="210" y="80" width="350" height="280" as="geometry"/></mxCell><mxCell id="12" value="SSH Daemon" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="30" y="30" width="140" height="60" as="geometry"/></mxCell><mxCell id="3" value="Backup / Restore" style="rounded=1;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="380" y="400" width="120" height="60" as="geometry"/></mxCell><mxCell id="8" value="Monitoring" style="rounded=1;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="220" y="400" width="120" height="60" as="geometry"/></mxCell><mxCell id="11" value="LDAP Service" style="rounded=1;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="660" y="110" width="120" height="60" as="geometry"/></mxCell><mxCell id="13" value="Authenticate&#xa;user" style="endArrow=classic;endFill=1;startArrow=none;startFill=0" edge="1" parent="1" source="12" target="11"><mxGeometry relative="1" as="geometry"/></mxCell><mxCell id="14" value="" style="shape=actor;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="40" y="110" width="40" height="60" as="geometry"/></mxCell><mxCell id="15" value="Logon" style="endArrow=classic;endFill=1" edge="1" parent="1" source="14" target="12"><mxGeometry relative="1" as="geometry"/></mxCell><mxCell id="16" value="Configuration&#xa;management" style="rounded=1;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="660" y="210" width="120" height="60" as="geometry"/></mxCell></root></mxGraphModel>
